--- a/order.properties
+++ b/order.properties
@@ -8,3 +8,10 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=mouse
 spring.datasource.password=mouse
 spring.jpa.show-sql=true
+
+
+
+spring.rabbitmq.host=192.168.218.132
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
