--- a/order.properties
+++ b/order.properties
@@ -15,3 +15,6 @@ spring.rabbitmq.host=192.168.218.132
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+
+spring.redis.host=192.168.218.132
+spring.redis.port=6379
