--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -9,3 +9,11 @@ zuul.routes.myProduct.sensitive-headers=
 
 #关闭权限验证，使得能够从页面上查看所有路由地址：页面地址/application/routes
 management.security.enabled=false
+
+spring.rabbitmq.host=192.168.218.132
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
+spring.redis.host=192.168.218.132
+spring.redis.port=6379
