--- a/user.properties
+++ b/user.properties
@@ -1,6 +1,6 @@
 server.port=9007
 
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/spcloud?characterEncoding=utf-8&useSSL=false
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/spcloud?characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=mouse
 spring.datasource.password=mouse
