--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -5,7 +5,8 @@ zuul.routes.myProduct.path=/myProduct/**
 zuul.routes.myProduct.service-id=product
 #将cookie传给各真实路径
 zuul.routes.myProduct.sensitive-headers=
-  
+#忽略全部服务敏感头
+zuul.sensitive-headers=
 
 #关闭权限验证，使得能够从页面上查看所有路由地址：页面地址/application/routes
 management.security.enabled=false
