--- a/order.properties
+++ b/order.properties
@@ -3,7 +3,7 @@ spring.application.name=order
 eureka.client.service-url.defaultZone=http://127.0.0.1:9001/eureka/
 
 
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/spcloud?characterEncoding=utf-8&useSSL=false
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/spcloud?characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=mouse
 spring.datasource.password=mouse
