--- a/product.properties
+++ b/product.properties
@@ -1,7 +1,7 @@
 server.port=9004
 
 
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/spcloud?characterEncoding=utf-8&useSSL=false
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/spcloud?characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=mouse
 spring.datasource.password=mouse
