--- a/order.properties
+++ b/order.properties
@@ -8,7 +8,7 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=mouse
 spring.datasource.password=mouse
 spring.jpa.show-sql=true
-
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 
 spring.rabbitmq.host=127.0.0.1
